package entity.base;

public interface Cookable {
    void cook();
    boolean isBurnt();

}
