package entity.base;

public interface Updatable {
    void update();
}
